--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.7.2",
         "@vitejs/plugin-vue": "^5.2.1",
         "ant-design-vue": "^4.2.6",
         "bootstrap": "^5.3.3",
         "vue": "^3.5.13",
-        "vue-router": "^4.5.0"
+        "vue-draggable-next": "^2.2.1",
+        "vue-router": "^4.5.0",
+        "vuedraggable": "^4.1.0"
     }
 }
